# Scaffold

./: .beamignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.sandbox  Makefile  README.md  docker-compose.yml  init-db.sql  nginx.conf  pyproject.toml  requirements.txt
.cursor/rules/: baml-rules.mdc
baml_client/: __init__.py  async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: build.baml
frontend/: .env.example  .env.template  Dockerfile  frontend.py  package-lock.json  package.json  vite.config.ts  websocket-proxy.js
frontend/src/: App.css  App.tsx  index.css  main.tsx  styled.d.ts
frontend/src/components/: header.tsx  navlink.tsx
frontend/src/components/navbar/: index.tsx  item.tsx
frontend/src/config/: backend.ts  beam.ts
frontend/src/hooks/: useMessageBus.ts
frontend/src/screens/Create/: index.tsx
frontend/src/screens/New/: index.tsx
frontend/src/services/: messageBus.ts  websocketBus.ts
frontend/src/types/: messages.ts
src/: agent.py  client.py  database.py  llm_providers.py  sandbox_manager.py  storage.py  tools.py  websocket_server.py
